--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,12 +46,16 @@ dependencies:
   path_provider: ^2.0.1
   path: ^1.7.0
   multi_image_picker: ^4.8.0
-  admob_flutter: ^1.0.1
+  #admob_flutter: ^1.0.1
   photo_view: ^0.11.1
   flutter_local_notifications: ^5.0.0
   timezone: ^0.7.0
   flutter_absolute_path: ^1.0.6
-  rich_text_controller: ^1.3.0
+  #rich_text_controller: ^1.3.0
+  admob_flutter:
+    git:
+      url: https://github.com/kmcgill88/admob_flutter.git
+
 
   onesignal_flutter: ^2.0.0
   bubble: ^1.2.1
