--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.4.1+4
+version: 1.5.1+5
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -46,12 +46,13 @@ dependencies:
   path_provider: ^2.0.1
   path: ^1.7.0
   multi_image_picker: ^4.8.0
-  #admob_flutter: ^1.0.1
   photo_view: ^0.11.1
   flutter_local_notifications: ^5.0.0
   timezone: ^0.7.0
   flutter_absolute_path: ^1.0.6
-  #rich_text_controller: ^1.3.0
+  rich_text_controller:
+    git:
+      url: https://github.com/micazi/rich_text_controller
   admob_flutter:
     git:
       url: https://github.com/kmcgill88/admob_flutter.git
