--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.5.1+5
+version: 1.5.3+7
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -33,7 +33,7 @@ dependencies:
   cloud_firestore: ^1.0.1
   firebase_auth: ^1.0.1
   firebase_core: ^1.0.1
-  firebase_messaging: ^9.0.1
+  #firebase_messaging: ^9.0.1
   flutter_week_view: ^1.0.0+2
   provider: ^5.0.0
   uuid: ^3.0.1
