--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.6.0+9
+version: 1.7.1+11
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -45,7 +45,8 @@ dependencies:
 
   path_provider: ^2.0.1
   path: ^1.7.0
-  multi_image_picker: ^4.8.0
+  #multi_image_picker: ^4.8.0
+  multi_image_picker2: ^5.0.2
   photo_view: ^0.11.1
   flutter_local_notifications: ^5.0.0
   timezone: ^0.7.0
@@ -62,6 +63,9 @@ dependencies:
   bubble: ^1.2.1
   animated_text_kit: ^4.2.1
   delayed_display: ^2.0.0
+  ionicons: ^0.1.2
+  flutter_typeahead: ^3.1.3
+
 
 
 
