--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.7.1+11
+version: 1.7.4+14
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -33,7 +33,6 @@ dependencies:
   cloud_firestore: ^1.0.1
   firebase_auth: ^1.0.1
   firebase_core: ^1.0.1
-  #firebase_messaging: ^9.0.1
   flutter_week_view: ^1.0.0+2
   provider: ^5.0.0
   uuid: ^3.0.1
@@ -45,7 +44,6 @@ dependencies:
 
   path_provider: ^2.0.1
   path: ^1.7.0
-  #multi_image_picker: ^4.8.0
   multi_image_picker2: ^5.0.2
   photo_view: ^0.11.1
   flutter_local_notifications: ^5.0.0
@@ -63,8 +61,8 @@ dependencies:
   bubble: ^1.2.1
   animated_text_kit: ^4.2.1
   delayed_display: ^2.0.0
-  ionicons: ^0.1.2
   flutter_typeahead: ^3.1.3
+  badges: ^2.0.1
 
 
 
